# platform-pic8bit

./: .gitignore  LICENSE  README.md  platform.json  platform.py  platform_installer.py  pyproject.toml  requirements.txt  setup.cfg  setup_dependencies.py
.github/workflows/: pages.yml
boards/: pic16f505.json  pic16f506.json  pic16f526.json  pic16f527.json  pic16f54.json  pic16f57.json  pic16f570.json  pic16f59.json  pic16f610.json  pic16f616.json  pic16f627.json  pic16f627a.json  pic16f628.json  pic16f628a.json  pic16f630.json  pic16f631.json  pic16f636.json  pic16f639.json  pic16f648a.json  pic16f676.json  pic16f677.json  pic16f684.json  pic16f685.json  pic16f687.json  pic16f688.json  pic16f689.json  pic16f690.json  pic16f707.json  pic16f716.json  pic16f72.json  pic16f720.json  pic16f721.json  pic16f722.json  pic16f722a.json  pic16f723.json  pic16f723a.json  pic16f724.json  pic16f726.json  pic16f727.json  pic16f73.json  (+82 more)
builder/: main.py
builder/frameworks/: arduino.py  pic-xc8.py  pic_universal_stubs.h
builder/frameworks/templates/: pic_includes.h.j2
docs/: requirements.txt
docs/source/: conf.py  index.rst  requirements.txt  troubleshooting.rst
docs/source/boards/: index.rst
docs/source/examples/: index.rst
examples/: README.md
examples/pic16f876-asm-blink/: platformio.ini
examples/pic16f876-asm-blink/src/: main.s
examples/pic16f876-blink/: README.md  platformio.ini
examples/pic16f876-blink/src/: main.c
examples/pic16f877-asm-blink/: platformio.ini
examples/pic16f877-asm-blink/src/: main.s
examples/pic16f877-blink/: platformio.ini
examples/pic16f877-blink/src/: main.c
scripts/: create_boards.py
